bootstrap 5 - secao 11: projeto dashboard - timeline parte 1

--- a/spacedu/projeto03-dashboard/index.html
+++ b/spacedu/projeto03-dashboard/index.html
@@ -38,17 +38,49 @@
           </ul>
         </div>
         <div class="col bg-light">
-          <div class="row">
+          <div class="row pt-4 px-4">
             <h1>Dashboard</h1>
-            <div class="row g-3">
-              <div class="col-3">
+            <div class="row px-4 g-3">
+              <div class="col-xl-3">
                 <div class="card">
                   <div class="card-body">
-                    <h3>Timeline</h3>
+                    <h5 class="card-title">Timeline</h5>
+                    <h6 class="card-subtitle">Atualizacoes e notificacoes</h6>
+
+                    <table class="table table-dorderless">
+                      <tr>
+                        <td class="fw-bold text-warning">8:32</td>
+                        <td>Estoque de 15%</td>
+                      </tr>
+                      <tr>
+                        <td class="fw-bold text-success">10:42</td>
+                        <td>Meta de venda atingida</td>
+                      </tr>
+                      <tr>
+                        <td class="fw-bold text-success">11:10</td>
+                        <td>Nova venda realizada</td>
+                      </tr>
+                      <tr>
+                        <td class="fw-bold text-danger">12:19</td>
+                        <td>Estoque de 10%</td>
+                      </tr>
+                      <tr>
+                        <td class="fw-bold text-success">15:19</td>
+                        <td>nova venda realizada</td>
+                      </tr>
+                      <tr>
+                        <td class="fw-bold text-success">15:19</td>
+                        <td>cehgada de produto no estoque</td>
+                      </tr>
+                      <tr>
+                        <td class="fw-bold text-warning">12:19</td>
+                        <td>Estoque em 25%</td>
+                      </tr>
+                    </table>
                   </div>
                 </div>
               </div>
-              <div class="col-9">
+              <div class="col-xl-9">
                 <div class="card">
                   <div class="card-body">
                     <h3>Graficos</h3>
