bootstrap 5 - secao 11: projeto dashboard - timeline parte 1

--- a/spacedu/projeto03-dashboard/index.html
+++ b/spacedu/projeto03-dashboard/index.html
@@ -42,12 +42,12 @@
             <h1>Dashboard</h1>
             <div class="row px-4 g-3">
               <div class="col-xl-3">
-                <div class="card">
+                <div class="card border-0">
                   <div class="card-body">
                     <h5 class="card-title">Timeline</h5>
                     <h6 class="card-subtitle">Atualizacoes e notificacoes</h6>
 
-                    <table class="table table-dorderless">
+                    <table class="table table-borderless">
                       <tr>
                         <td class="fw-bold text-warning">8:32</td>
                         <td>Estoque de 15%</td>
