bootstrap 5 - secao 11: projeto dashboard - corrige texto

--- a/spacedu/projeto03-dashboard/index.html
+++ b/spacedu/projeto03-dashboard/index.html
@@ -66,11 +66,11 @@
                       </tr>
                       <tr>
                         <td class="fw-bold text-success">15:19</td>
-                        <td>nova venda realizada</td>
+                        <td>Nova venda realizada</td>
                       </tr>
                       <tr>
                         <td class="fw-bold text-success">15:19</td>
-                        <td>cehgada de produto no estoque</td>
+                        <td>Chegada de produto no estoque</td>
                       </tr>
                       <tr>
                         <td class="fw-bold text-warning">12:19</td>
