bootstrap 5 - secao 11: projeto dashboard - timeline parte 1

--- a/spacedu/projeto03-dashboard/index.html
+++ b/spacedu/projeto03-dashboard/index.html
@@ -45,7 +45,7 @@
                 <div class="card border-0">
                   <div class="card-body">
                     <h5 class="card-title">Timeline</h5>
-                    <h6 class="card-subtitle">Atualizacoes e notificacoes</h6>
+                    <h6 class="card-subtitle">Atualizações e notificações</h6>
 
                     <table class="table table-borderless">
                       <tr>
