--- a/spacedu/projeto03-dashboard/index.html
+++ b/spacedu/projeto03-dashboard/index.html
@@ -17,8 +17,35 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.min.css"
     />
     <style type="text/css">
+      body,
+      * {
+        font-family: sans-serif;
+      }
+
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6 {
+        font-family: sans-serif;
+        font-weight: bold;
+      }
+
       .bg-white-50 {
         background-color: rgba(255, 255, 255, 0.5);
+      }
+
+      .bg-primary {
+        background-color: #396eff !important;
+      }
+
+      .bg-light {
+        background-color: #eaf6fe !important;
+      }
+
+      .text-primary {
+        color: #396eff !important;
       }
     </style>
   </head>
@@ -39,13 +66,15 @@
         </div>
         <div class="col bg-light">
           <div class="row pt-4 px-4">
-            <h1>Dashboard</h1>
+            <h1 class="text-primary">Dashboard</h1>
             <div class="row px-4 g-3">
               <div class="col-xl-3">
                 <div class="card border-0">
                   <div class="card-body">
                     <h5 class="card-title">Timeline</h5>
-                    <h6 class="card-subtitle">Atualizações e notificações</h6>
+                    <h6 class="card-subtitle text-secondary fw-light">
+                      Atualizações e notificações
+                    </h6>
 
                     <table class="table table-borderless">
                       <tr>
@@ -108,7 +137,7 @@
           <h1 class="lead text-center">Notificacoes</h1>
 
           <div class="mt-4 mx-2 bg-white-50 p-2 rounded">
-            <h5>Maria diz:</h5>
+            <h5 class="fw-bold">Maria diz:</h5>
             <p class="mb-0">Preciso do relatorio de vendas hoje a tarde.</p>
           </div>
 
