bootstrap 5 - secao 11: projeto dashboard - timeline parte 2

--- a/spacedu/projeto03-dashboard/index.html
+++ b/spacedu/projeto03-dashboard/index.html
@@ -76,34 +76,42 @@
                       Atualizações e notificações
                     </h6>
 
-                    <table class="table table-borderless">
+                    <table class="mt-4 table table-borderless">
                       <tr>
                         <td class="fw-bold text-warning">8:32</td>
-                        <td>Estoque de 15%</td>
+                        <td class="text-secondary fw-light">Estoque de 15%</td>
                       </tr>
                       <tr>
                         <td class="fw-bold text-success">10:42</td>
-                        <td>Meta de venda atingida</td>
+                        <td class="text-secondary fw-light">
+                          Meta de venda atingida
+                        </td>
                       </tr>
                       <tr>
                         <td class="fw-bold text-success">11:10</td>
-                        <td>Nova venda realizada</td>
+                        <td class="text-secondary fw-light">
+                          Nova venda realizada
+                        </td>
                       </tr>
                       <tr>
                         <td class="fw-bold text-danger">12:19</td>
-                        <td>Estoque de 10%</td>
+                        <td class="text-secondary fw-light">Estoque de 10%</td>
                       </tr>
                       <tr>
                         <td class="fw-bold text-success">15:19</td>
-                        <td>Nova venda realizada</td>
+                        <td class="text-secondary fw-light">
+                          Nova venda realizada
+                        </td>
                       </tr>
                       <tr>
                         <td class="fw-bold text-success">15:19</td>
-                        <td>Chegada de produto no estoque</td>
+                        <td class="text-secondary fw-light">
+                          Chegada de produto no estoque
+                        </td>
                       </tr>
                       <tr>
                         <td class="fw-bold text-warning">12:19</td>
-                        <td>Estoque em 25%</td>
+                        <td class="text-secondary fw-light">Estoque em 25%</td>
                       </tr>
                     </table>
                   </div>
