bootstrap 5 - secao 11: projeto dashboard - relatorio de vendas

--- a/spacedu/projeto03-dashboard/index.html
+++ b/spacedu/projeto03-dashboard/index.html
@@ -68,7 +68,7 @@
           <div class="row pt-4 px-4">
             <h1 class="text-primary">Dashboard</h1>
             <div class="row px-4 g-3">
-              <div class="col-xl-3">
+              <div class="col-xxl-5">
                 <div class="card border-0">
                   <div class="card-body">
                     <h5 class="card-title">Timeline</h5>
@@ -117,10 +117,82 @@
                   </div>
                 </div>
               </div>
-              <div class="col-xl-9">
+              <div class="col-xxl-7">
                 <div class="card">
                   <div class="card-body">
-                    <h3>Graficos</h3>
+                    <h5 class="card-titles">Relatorio de vendas</h5>
+                    <h6 class="card-subtitle text-secondary fw-light">
+                      59.387 vendas
+                    </h6>
+
+                    <table class="table table-bordeless align-middle">
+                      <tr>
+                        <td>
+                          <span class="fw-bold">Tiago sousa</span>
+                          <span class="d-block text-secondary fw-light"
+                            >Consultor</span
+                          >
+                        </td>
+                        <td>
+                          <span class="fw-bold">R$ 129.001,00</span>
+                          <span class="d-block text-secondary fw-light"
+                            >Pago</span
+                          >
+                        </td>
+                        <td>
+                          <span class="fw-bold">5%</span>
+                        </td>
+                        <td class="text-end">
+                          <button class="btn btn-success">
+                            <i class="bi bi-arrow-right"></i>
+                          </button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <span class="fw-bold">Jonas rodrigues</span>
+                          <span class="d-block text-secondary fw-light"
+                            >Consultor</span
+                          >
+                        </td>
+                        <td>
+                          <span class="fw-bold">R$ 120.001,00</span>
+                          <span class="d-block text-secondary fw-light"
+                            >Pago</span
+                          >
+                        </td>
+                        <td>
+                          <span class="fw-bold">15%</span>
+                        </td>
+                        <td class="text-end">
+                          <button class="btn btn-success">
+                            <i class="bi bi-arrow-right"></i>
+                          </button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <span class="fw-bold">Fernando sousa</span>
+                          <span class="d-block text-secondary fw-light"
+                            >Vendedor</span
+                          >
+                        </td>
+                        <td>
+                          <span class="fw-bold">R$ 229.001,00</span>
+                          <span class="d-block text-secondary fw-light"
+                            >Pago</span
+                          >
+                        </td>
+                        <td>
+                          <span class="fw-bold">45%</span>
+                        </td>
+                        <td class="text-end">
+                          <button class="btn btn-success">
+                            <i class="bi bi-arrow-right"></i>
+                          </button>
+                        </td>
+                      </tr>
+                    </table>
                   </div>
                 </div>
               </div>
@@ -141,7 +213,7 @@
             </div>
           </div>
         </div>
-        <div class="d-none d-xl-block col-3 bg-primary text-white vh-100">
+        <div class="d-none d-xl-block col-2 bg-primary text-white vh-100">
           <h1 class="lead text-center">Notificacoes</h1>
 
           <div class="mt-4 mx-2 bg-white-50 p-2 rounded">
