bootstrap 5 - secao 11: projeto dashboard - divisao e comissao

--- a/spacedu/projeto03-dashboard/index.html
+++ b/spacedu/projeto03-dashboard/index.html
@@ -197,16 +197,52 @@
                 </div>
               </div>
               <div class="col-3">
-                <div class="card">
+                <div class="card border-0">
                   <div class="card-body">
-                    <h3>Timeline</h3>
+                    <h5 class="card-titles">Divisão de vendas</h5>
+                    <h6 class="card-subtitle text-secondary fw-light">
+                      29.387 vendas
+                    </h6>
+                    <div class="row text-center fw-bold fs-5">
+                      <div class="col">
+                        <span class="text-warning d-block">53.2%</span
+                        >Presencial
+                      </div>
+                      <div class="col">
+                        <span class="text-warning d-block">48%</span>Online
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
               <div class="col-9">
-                <div class="card">
+                <div class="card border-0">
                   <div class="card-body">
-                    <h3>Graficos</h3>
+                    <h5 class="card-titles">Relatorio de comisão</h5>
+                    <h6 class="card-subtitle text-secondary fw-light">
+                      29.387 vendas
+                    </h6>
+
+                    <div class="row fw-bold">
+                      <div class="col">
+                        <span class="d-block text-secondary fw-normal">
+                          Vendas
+                        </span>
+                        R$ 129.001,00
+                      </div>
+                      <div class="col">
+                        <span class="d-block text-secondary fw-normal">
+                          Comisão
+                        </span>
+                        R$ 129.001,00
+                      </div>
+                      <div class="col">
+                        <span class="d-block text-secondary fw-normal">
+                          Bonus
+                        </span>
+                        -
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
