bootstrap 5 - secao 11: projeto dashboard - corrige texto

--- a/spacedu/projeto03-dashboard/index.html
+++ b/spacedu/projeto03-dashboard/index.html
@@ -218,7 +218,7 @@
               <div class="col-9">
                 <div class="card border-0">
                   <div class="card-body">
-                    <h5 class="card-titles">Relatorio de comisão</h5>
+                    <h5 class="card-titles">Relatorio de comissão</h5>
                     <h6 class="card-subtitle text-secondary fw-light">
                       29.387 vendas
                     </h6>
@@ -232,7 +232,7 @@
                       </div>
                       <div class="col">
                         <span class="d-block text-secondary fw-normal">
-                          Comisão
+                          Comissão
                         </span>
                         R$ 129.001,00
                       </div>
