bootstrap 5 - secao 11: projeto dashboard - corrige texto

--- a/spacedu/projeto03-dashboard/index.html
+++ b/spacedu/projeto03-dashboard/index.html
@@ -238,7 +238,7 @@
                       </div>
                       <div class="col">
                         <span class="d-block text-secondary fw-normal">
-                          Bonus
+                          Bônus
                         </span>
                         -
                       </div>
