bootstrap 5 - secao 11: projeto dashboard - corrigindo a viewport

--- a/spacedu/projeto03-dashboard/index.html
+++ b/spacedu/projeto03-dashboard/index.html
@@ -53,7 +53,7 @@
     <div class="container-fluid">
       <div class="row">
         <div
-          class="col-1 col-xl-2 bg-primary vh-100 d-flex justify-content-center"
+          class="col-1 col-xl-2 bg-primary min-vh-100 d-flex justify-content-center"
         >
           <ul class="nav pt-4">
             <li class="nav-item">
@@ -64,7 +64,7 @@
             </li>
           </ul>
         </div>
-        <div class="col bg-light">
+        <div class="col bg-light min-vh-100">
           <div class="row pt-4 px-4">
             <h1 class="text-primary">Dashboard</h1>
             <div class="row px-4 g-3">
@@ -249,7 +249,7 @@
             </div>
           </div>
         </div>
-        <div class="d-none d-xl-block col-2 bg-primary text-white vh-100">
+        <div class="d-none d-xl-block col-2 bg-primary text-white min-vh-100">
           <h1 class="lead text-center">Notificacoes</h1>
 
           <div class="mt-4 mx-2 bg-white-50 p-2 rounded">
