--- a/spacedu/projeto03-dashboard/index.html
+++ b/spacedu/projeto03-dashboard/index.html
@@ -16,38 +16,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.min.css"
     />
-    <style type="text/css">
-      body,
-      * {
-        font-family: sans-serif;
-      }
-
-      h1,
-      h2,
-      h3,
-      h4,
-      h5,
-      h6 {
-        font-family: sans-serif;
-        font-weight: bold;
-      }
-
-      .bg-white-50 {
-        background-color: rgba(255, 255, 255, 0.5);
-      }
-
-      .bg-primary {
-        background-color: #396eff !important;
-      }
-
-      .bg-light {
-        background-color: #eaf6fe !important;
-      }
-
-      .text-primary {
-        color: #396eff !important;
-      }
-    </style>
+    <link rel="stylesheet" href="css/custom.css" />
   </head>
   <body>
     <div class="container-fluid">
