bootstrap 5 - secao 11: projeto dashboard - grafico de barras

--- a/spacedu/projeto03-dashboard/index.html
+++ b/spacedu/projeto03-dashboard/index.html
@@ -172,6 +172,11 @@
                     <h6 class="card-subtitle text-secondary fw-light">
                       29.387 vendas
                     </h6>
+                    <div class="row">
+                      <div class="col d-flex">
+                        <div id="piecharts"></div>
+                      </div>
+                    </div>
                     <div class="row text-center fw-bold fs-5">
                       <div class="col">
                         <span class="text-warning d-block">53.2%</span
@@ -239,5 +244,7 @@
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+    <script src="js/charts.js"></script>
   </body>
 </html>
