bootstrap 5 - secao 11: projeto dashboard - finalizando grafico de barras

--- a/spacedu/projeto03-dashboard/index.html
+++ b/spacedu/projeto03-dashboard/index.html
@@ -216,6 +216,12 @@
                         </span>
                         -
                       </div>
+
+                      <div class="row mt-4">
+                        <div class="col">
+                          <div id="barcharts"></div>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
