--- a/spacedu/secao13/aula01/index.html
+++ b/spacedu/secao13/aula01/index.html
@@ -11,7 +11,21 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
+  <body class="p-4 text-center">
+    <button
+      class="btn btn-primary"
+      data-bs-toggle="collapse"
+      data-bs-target="#content"
+    >
+      Abrir/Fechar
+    </button>
+
+    <div id="content" class="mt-4 text-start border rounded p-2 collapse show">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt suscipit
+      odio soluta assumenda, neque, voluptatem enim culpa sapiente iste et,
+      distinctio doloribus non? Facilis, placeat impedit. Aliquid vero quod cum!
+    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
