--- a/spacedu/secao13/aula01/index.html
+++ b/spacedu/secao13/aula01/index.html
@@ -26,6 +26,26 @@
       distinctio doloribus non? Facilis, placeat impedit. Aliquid vero quod cum!
     </div>
 
+    <button
+      class="btn btn-primary"
+      data-bs-toggle="collapse"
+      data-bs-target=".content"
+    >
+      Abrir/Fechar
+    </button>
+
+    <div class="content mt-4 text-start border rounded p-2 collapse show">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt suscipit
+      odio soluta assumenda, neque, voluptatem enim culpa sapiente iste et,
+      distinctio doloribus non? Facilis, placeat impedit. Aliquid vero quod cum!
+    </div>
+
+    <div class="content mt-4 text-start border rounded p-2 collapse show">
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa aspernatur
+      aperiam alias. Ea sit, aliquid dolor, facilis tempora temporibus possimus
+      recusandae non amet debitis sunt itaque saepe blanditiis eum. Dolore.
+    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
