--- a/spacedu/secao13/aula01/index.html
+++ b/spacedu/secao13/aula01/index.html
@@ -26,6 +26,7 @@
       distinctio doloribus non? Facilis, placeat impedit. Aliquid vero quod cum!
     </div>
 
+    <hr class="mb-5" />
     <button
       class="btn btn-primary"
       data-bs-toggle="collapse"
