--- a/spacedu/secao13/aula02/index.html
+++ b/spacedu/secao13/aula02/index.html
@@ -20,6 +20,12 @@
         molestias, itaque maiores? Voluptas repellendus esse eius facilis veniam
         culpa.
       </p>
+      <div class="btn-group btn-group-lg">
+        <button class="btn btn-primary">visualizar</button>
+        <button class="btn btn-warning">editar</button>
+        <button class="btn btn-danger">excluir</button>
+      </div>
+
       <div class="btn-group-vertical btn-group-lg">
         <button class="btn btn-primary">visualizar</button>
         <button class="btn btn-warning">editar</button>
