bootstrap 5 - secao 13: bootstrap 5 componentes - button group parte 2

--- a/spacedu/secao13/aula02/index.html
+++ b/spacedu/secao13/aula02/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
+  <body class="p-4">
     <div class="border rounded p-2">
       <h1>mouse</h1>
       <p>
