bootstrap 5 - secao 13: bootstrap 5 componentes - dropdown parte 2

--- a/spacedu/secao13/aula04/index.html
+++ b/spacedu/secao13/aula04/index.html
@@ -45,7 +45,10 @@
 
     <hr />
 
-    <div class="btn-group">
+    <div
+      class="btn-group dropend"
+      style="margin-top: 300px; margin-left: 100px"
+    >
       <button class="btn btn-danger">Dropdown</button>
 
       <button
@@ -53,7 +56,7 @@
         data-bs-toggle="dropdown"
       ></button>
 
-      <ul class="dropdown-menu">
+      <ul class="dropdown-menu dropdown-menu-dark">
         <li>
           <span class="dropdown-item-text">
             <strong>Titulo</strong>
