--- a/spacedu/secao13/aula04/index.html
+++ b/spacedu/secao13/aula04/index.html
@@ -17,7 +17,7 @@
         class="btn btn-danger btn-lg dropdown-toggle"
         data-bs-toggle="dropdown"
       >
-        Dropdown
+        Dropdown Menu
       </button>
       <ul class="dropdown-menu">
         <li>
@@ -49,7 +49,7 @@
       class="btn-group dropend"
       style="margin-top: 300px; margin-left: 100px"
     >
-      <button class="btn btn-danger">Dropdown</button>
+      <button class="btn btn-danger">Dropdown Menu</button>
 
       <button
         class="btn btn-primary dropdown-toggle dropdown-toggle-split"
