bootstrap 5 - secao 13: bootstrap 5 componentes - dropdown parte 3

--- a/spacedu/secao13/aula05/index.html
+++ b/spacedu/secao13/aula05/index.html
@@ -19,7 +19,7 @@
         data-bs-auto-close="true"
         data-bs-offset="0,30"
       >
-        Dropdown Menu - selecção de marcas famosas
+        Dropdown Menu - seleção de marcas famosas
       </button>
       <ul class="dropdown-menu dropdown-menu-start dropdown-menu-xl-end">
         <li>
