bootstrap 5 - secao 13: bootstrap 5 componentes - accordion

--- a/spacedu/secao13/aula06/index.html
+++ b/spacedu/secao13/aula06/index.html
@@ -21,7 +21,7 @@
             data-bs-toggle="collapse"
             data-bs-target="#resposta01"
           >
-            Pergunta 01: O que é accordions ?
+            Pergunta 01: O que é accordion ?
           </button>
         </h2>
         <div class="accordion-collapse collapse show" id="resposta01">
@@ -41,7 +41,7 @@
             data-bs-toggle="collapse"
             data-bs-target="#resposta02"
           >
-            Pergunta 01: O que é accordions ?
+            Pergunta 02: O que é accordion ?
           </button>
         </h2>
         <div class="accordion-collapse collapse" id="resposta02">
@@ -61,7 +61,7 @@
             data-bs-toggle="collapse"
             data-bs-target="#resposta03"
           >
-            Pergunta 01: O que é accordions ?
+            Pergunta 03: O que é accordion ?
           </button>
         </h2>
         <div class="accordion-collapse collapse" id="resposta03">
