bootstrap 5 - secao 13: bootstrap 5 componentes - accordion

--- a/spacedu/secao13/aula06/index.html
+++ b/spacedu/secao13/aula06/index.html
@@ -46,10 +46,10 @@
         </h2>
         <div class="accordion-collapse collapse" id="resposta02">
           <div class="accordion-body">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores
-            ullam doloribus iste. Quas esse enim corrupti quo laboriosam, ipsa
-            quos? Fuga, corrupti possimus! Unde in fugiat impedit nobis nulla
-            exercitationem?
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores
+            natus voluptatum alias impedit sint error, accusamus, ducimus
+            temporibus corporis quibusdam sequi quas sunt ipsa, quo molestiae
+            nulla placeat vero atque!
           </div>
         </div>
       </div>
@@ -66,10 +66,10 @@
         </h2>
         <div class="accordion-collapse collapse" id="resposta03">
           <div class="accordion-body">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores
-            ullam doloribus iste. Quas esse enim corrupti quo laboriosam, ipsa
-            quos? Fuga, corrupti possimus! Unde in fugiat impedit nobis nulla
-            exercitationem?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit
+            aut accusantium quis atque est tenetur error magnam ad at tempora.
+            Placeat harum officiis repudiandae earum explicabo aspernatur. Rem,
+            esse beatae?
           </div>
         </div>
       </div>
