bootstrap 5 - secao 13: bootstrap 5 componentes - alert parte 1

--- a/spacedu/secao13/aula07/index.html
+++ b/spacedu/secao13/aula07/index.html
@@ -28,7 +28,7 @@
       <button class="btn btn-info">Doe</button>
     </div>
 
-    <div class="alert alert-danger alert-dismissible fade show">
+    <div class="alert alert-success alert-dismissible fade show">
       o <strong>produto</strong> não foi cadastrado com sucesso
       <button class="btn-close" data-bs-dismiss="alert"></button>
     </div>
