--- a/spacedu/secao13/aula11/index.html
+++ b/spacedu/secao13/aula11/index.html
@@ -16,6 +16,19 @@
     <span class="spinner-border text-primary spinner-border-sm"></span>
     <hr />
     <span class="spinner-grow text-warning"></span>
+    <hr />
+    <div class="d-flex justify-content-between">
+      <span>carregando...</span>
+      <span class="spinner-border"></span>
+    </div>
+    <div class="text-center">
+      <span class="spinner-border"></span>
+    </div>
+
+    <button class="btn btn-primary" disabled>
+      <span class="spinner-border spinner-border-sm"></span>
+      enviar
+    </button>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
