bootstrap 5 - secao 13: bootstrap 5 componentes - tooltip

--- a/spacedu/secao13/aula13/index.html
+++ b/spacedu/secao13/aula13/index.html
@@ -17,7 +17,7 @@
     <div class="text-center">
       <button
         class="btn btn-outline-primary"
-        title="esta apresentando uma legenda"
+        title="esta apresentando um tooltip"
         data-bs-toggle="tooltip"
         data-bs-placement="right"
       >
@@ -28,7 +28,7 @@
     <div class="text-center">
       <button
         class="btn btn-outline-success"
-        title="esta apresentando uma legenda"
+        title="esta apresentando um tooltip"
         data-bs-toggle="tooltip"
         data-bs-placement="right"
       >
