--- a/spacedu/secao14/aula08/index.html
+++ b/spacedu/secao14/aula08/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bootstrap 5 - secao 13 - poppover - aula 14</title>
+    <title>Bootstrap 5 - secao 13 - badge - aula 08</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -12,26 +12,29 @@
     />
   </head>
   <body>
-    <h1>popover</h1>
-    <div class="text-center">
-      <button
-        id="botaoPopover"
-        class="btn btn-primary"
-        data-bs-toggle="popover"
-        data-bs-placement="top"
-        data-bs-content="este é um popover"
-      >
-        clique para mostrar
-      </button>
-    </div>
+    <table class="table table-bordered table-hover">
+      <tr>
+        <td>
+          Mouse da microsoft <span class="badge bg-warning">Estoque baixo</span>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          Mouse da corsair<span class="badge bg-danger">sem estoque</span>
+        </td>
+      </tr>
+      <tr>
+        <td>Mouse da razor<span class="badge bg-success">100%</span></td>
+      </tr>
+      <tr>
+        <td>Mouse da reddragon</td>
+      </tr>
+    </table>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
       crossorigin="anonymous"
     ></script>
-    <script>
-      var element = document.querySelector("#botaoPopover");
-      new bootstrap.Popover(element);
-    </script>
   </body>
 </html>
