--- a/spacedu/secao14/aula10/index.html
+++ b/spacedu/secao14/aula10/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bootstrap 5 - secao 13 - poppover - aula 14</title>
+    <title>Bootstrap 5 - secao 13 - progress-bar - aula 10</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -11,27 +11,23 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
-    <h1>popover</h1>
-    <div class="text-center">
-      <button
-        id="botaoPopover"
-        class="btn btn-primary"
-        data-bs-toggle="popover"
-        data-bs-placement="top"
-        data-bs-content="este é um popover"
-      >
-        clique para mostrar
-      </button>
+  <body class="p-4">
+    <div class="progress">
+      <div
+        class="progress-bar progress-bar-striped bg-success"
+        style="width: 50%"
+      ></div>
     </div>
+
+    <div class="progress mt-2">
+      <div class="progress-bar" style="width: 15%"></div>
+      <div class="progress-bar bg-success" style="width: 15%"></div>
+    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
       crossorigin="anonymous"
     ></script>
-    <script>
-      var element = document.querySelector("#botaoPopover");
-      new bootstrap.Popover(element);
-    </script>
   </body>
 </html>
