--- a/spacedu/secao14/aula11/index.html
+++ b/spacedu/secao14/aula11/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bootstrap 5 - secao 13 - poppover - aula 14</title>
+    <title>Bootstrap 5 - secao 13 - spinner - aula 11</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -11,27 +11,29 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
-    <h1>popover</h1>
-    <div class="text-center">
-      <button
-        id="botaoPopover"
-        class="btn btn-primary"
-        data-bs-toggle="popover"
-        data-bs-placement="top"
-        data-bs-content="este é um popover"
-      >
-        clique para mostrar
-      </button>
+  <body class="p-4">
+    <h1>Spinner</h1>
+    <span class="spinner-border text-primary spinner-border-sm"></span>
+    <hr />
+    <span class="spinner-grow text-warning"></span>
+    <hr />
+    <div class="d-flex justify-content-between">
+      <span>carregando...</span>
+      <span class="spinner-border"></span>
     </div>
+    <div class="text-center">
+      <span class="spinner-border"></span>
+    </div>
+
+    <button class="btn btn-primary" disabled>
+      <span class="spinner-border spinner-border-sm"></span>
+      enviar
+    </button>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
       crossorigin="anonymous"
     ></script>
-    <script>
-      var element = document.querySelector("#botaoPopover");
-      new bootstrap.Popover(element);
-    </script>
   </body>
 </html>
