--- a/spacedu/secao14/aula14/index.html
+++ b/spacedu/secao14/aula14/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bootstrap 5 - secao 13 - poppover - aula 14</title>
+    <title>Bootstrap 5 - secao 13 - toast - aula 12</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -12,26 +12,31 @@
     />
   </head>
   <body>
-    <h1>popover</h1>
-    <div class="text-center">
-      <button
-        id="botaoPopover"
-        class="btn btn-primary"
-        data-bs-toggle="popover"
-        data-bs-placement="top"
-        data-bs-content="este é um popover"
-      >
-        clique para mostrar
-      </button>
+    <button id="botao" class="btn btn-primary">mostrar</button>
+
+    <div class="toast">
+      <div class="toast-header">
+        <strong class="me-auto">Gerente João Rodrigues diz:</strong>
+        <button class="btn-close" data-bs-dismiss="toast"></button>
+      </div>
+      <div class="toast-body">
+        Preciso do relatorio de vendas do mes ainda hoje
+      </div>
     </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
       crossorigin="anonymous"
     ></script>
+
     <script>
-      var element = document.querySelector("#botaoPopover");
-      new bootstrap.Popover(element);
+      var elemento = document.querySelector(".toast");
+      var toast = new bootstrap.Toast(elemento);
+
+      document.querySelector("#botao").addEventListener("click", () => {
+        toast.show();
+      });
     </script>
   </body>
 </html>
