--- a/html5-css3-inicio/html/index.html
+++ b/html5-css3-inicio/html/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <title>Document</title>
 </head>
 <body>
     <h1>Hello World</h1>
     <p>este é o meu primeiro paragrafo</p>
+    <h2>titulo 2</h2>
+    <h3>titulo 3</h3>
+    <h4>titulo 4</h4>
+    <h5>titulo 5</h5>
+    <h6>titulo 6</h6>
 </body>
 </html>
