html5-css3-inicio - comentarios em html

--- a/html5-css3-inicio/html/index.html
+++ b/html5-css3-inicio/html/index.html
@@ -4,6 +4,7 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- aqui é um comentario -->
     <h1>Hello World</h1>
     <p>este é o meu primeiro paragrafo</p>
     <h2>titulo 2</h2>
