--- a/html5-css3-inicio/html/index.html
+++ b/html5-css3-inicio/html/index.html
@@ -7,10 +7,6 @@
     <!-- aqui é um comentario -->
     <h1>Hello World</h1>
     <p>este é o meu primeiro paragrafo</p>
-    <h2>titulo 2</h2>
-    <h3>titulo 3</h3>
-    <h4>titulo 4</h4>
-    <h5>titulo 5</h5>
-    <h6>titulo 6</h6>
+    <p>este <a href="https://www.google.com">link</a> vai para o google</p>
 </body>
 </html>
