--- a/html5-css3-inicio/html/index.html
+++ b/html5-css3-inicio/html/index.html
@@ -8,5 +8,6 @@
     <h1>Hello World</h1>
     <p>este é o meu primeiro paragrafo</p>
     <p>este <a href="https://www.google.com">link</a> vai para o google</p>
+    <img src="java_original.png" alt="logo do java" />
 </body>
 </html>
