html5-css3-inicio - formulario html principais elementos

--- a/html5-css3-inicio/html/form.html
+++ b/html5-css3-inicio/html/form.html
@@ -7,7 +7,21 @@
     <form action="envio.php" method="post">
 
         <input type="text" name="nome">
-        <br>
+        <br />
+
+        <input type="checkbox" name="temcarro" >eu tenho um carro 
+        <br />
+        data nascimento <input type="date" name="dataaniversario">
+        <br />
+        <input type="radio" name="sexo" value="masculino" >masculino
+        <input type="radio" name="sexo" value="feminino" >feminino
+        <input type="radio" name="sexo" value="outros" >outros
+        <br />
+        <br />
+        <textarea rows="4" cols="2"></textarea>
+        <br />
+        <br />
+        <input type="password" name="senha" >
 
         <input type="submit" value="enviar">
     </form>
