html5-css3-inicio - formulario html atributos dos formularios

--- a/html5-css3-inicio/html/form_attr.html
+++ b/html5-css3-inicio/html/form_attr.html
@@ -15,7 +15,7 @@
         <br><br>
         <input type="text" name="nome" value="nao pode ser alterado" disabled>
 
-        <input type="submit" name="enviar" value="enviar">
+        <input type="submit" name="btnenviar" value="enviar">
     </form>
 </body>
 </html>
