html5-css3-inicio - html semantico

--- a/html5-css3-inicio/html/html_semantico.html
+++ b/html5-css3-inicio/html/html_semantico.html
@@ -9,21 +9,25 @@
 </head>
 <body>
     <header>
+        <!-- cabeçalho -->
         <nav>
-
+            <!-- logo  -->
+            <!-- barra de navegação com links -->
         </nav>
     </header>
     <main>
+        <!-- conteudo principal -->
         <h1>titulo principal</h1>
         <h2>explicando o conteudo da pagina</h2>
     </main>
     <section>
-
+        <!-- secao secundaria  -->
     </section>
     <aside>
-
+        <!-- algum contueod na lateral do site -->
     </aside>
     <footer>
+        <!-- rodape -->
         <p>informações de contato</p>
         <p>copyright</p>
     </footer>
