html5-css3-inicio - html semantico

--- a/html5-css3-inicio/html/html_semantico.html
+++ b/html5-css3-inicio/html/html_semantico.html
@@ -24,7 +24,7 @@
         <!-- secao secundaria  -->
     </section>
     <aside>
-        <!-- algum contueod na lateral do site -->
+        <!-- algum conteudo na lateral do site -->
     </aside>
     <footer>
         <!-- rodape -->
