--- a/html5-css3-inicio/css/index.html
+++ b/html5-css3-inicio/css/index.html
@@ -2,18 +2,12 @@
 <html>
 <head>
     <title>aulas de css</title>
+    <meta charset="utf-8" >
     <link rel="stylesheet" type="text/css" href="styles.css" >
-    <style type="text/css">
-        p {
-            color: gray;
-        }
-    </style>
 </head>
 <body>
     <h1>titulo principal</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti ipsam tempora dolorum, labore cumque qui temporibus debitis illum ex at! Eaque magni culpa ipsum unde necessitatibus, illo nesciunt placeat sunt?Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque optio corrupti consectetur ad, natus molestias in illo, rem odit sed, placeat et ullam ut quibusdam impedit excepturi cum? Rerum, doloremque! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore possimus, soluta minus nulla eligendi pariatur molestias dolorem maiores tempore dolores rerum vel dolor delectus sit aut quasi veritatis doloribus numquam.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, sunt doloribus? Quibusdam possimus molestiae facere impedit, modi cumque labore accusamus, consequatur dicta incidunt dignissimos sequi consequuntur earum sunt nemo natus!Lorem Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente quisquam aliquam iste nisi eligendi neque doloremque nulla. Voluptatibus magnam doloremque mollitia blanditiis earum minima, facilis vel natus. Cupiditate, accusantium pariatur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur quia sapiente adipisci expedita, beatae tempora earum inventore esse atque sint distinctio, mollitia quibusdam molestiae culpa consequuntur, vel debitis soluta sed.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, sunt doloribus? Quibusdam possimus molestiae facere impedit, modi cumque labore accusamus, consequatur dicta incidunt dignissimos sequi consequuntur earum sunt nemo natus!Lorem Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente quisquam aliquam iste nisi eligendi neque doloremque nulla. Voluptatibus magnam doloremque mollitia blanditiis earum minima, facilis vel natus. Cupiditate, accusantium pariatur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur quia sapiente adipisci expedita, beatae tempora earum inventore esse atque sint distinctio, mollitia quibusdam molestiae culpa consequuntur, vel debitis soluta sed.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, sunt doloribus? Quibusdam possimus molestiae facere impedit, modi cumque labore accusamus, consequatur dicta incidunt dignissimos sequi consequuntur earum sunt nemo natus!Lorem Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente quisquam aliquam iste nisi eligendi neque doloremque nulla. Voluptatibus magnam doloremque mollitia blanditiis earum minima, facilis vel natus. Cupiditate, accusantium pariatur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur quia sapiente adipisci expedita, beatae tempora earum inventore esse atque sint distinctio, mollitia quibusdam molestiae culpa consequuntur, vel debitis soluta sed.</p>
+    <h2>este é o segundo titulo</h2>
 </body>
 </html>
