html5-css3-inicio - as possibilidades de adcionar cores no css

--- a/html5-css3-inicio/css/index.html
+++ b/html5-css3-inicio/css/index.html
@@ -13,5 +13,15 @@
     <p class="p-texto">algum texto 1</p>
     <p class="p-texto">algum texto 2</p>
     <p class="p-texto">algum texto 3</p>
+    <div>
+        <p>este é especifico</p>
+        <p class="p-dentro-da-div">este é mais especifico</p>
+        <p id="p-super-especifico">este é muito mais especifico</p>
+    </div>
+    <div>
+        <p class="nome">nome da cor</p>
+        <p class="hexa">hexadecimal</p>
+        <p class="rgba">rgba</p>
+    </div>
 </body>
 </html>
