html5-css3-inicio - adicionando backgrounds com css

--- a/html5-css3-inicio/css/index.html
+++ b/html5-css3-inicio/css/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" type="text/css" href="styles.css" >
 </head>
 <body>
+    <div>
+        <a href="background.html">para os backgrounds</a>
+    </div>
     <h1>titulo principal</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti ipsam tempora dolorum, labore cumque qui temporibus debitis illum ex at! Eaque magni culpa ipsum unde necessitatibus, illo nesciunt placeat sunt?Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque optio corrupti consectetur ad, natus molestias in illo, rem odit sed, placeat et ullam ut quibusdam impedit excepturi cum? Rerum, doloremque! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore possimus, soluta minus nulla eligendi pariatur molestias dolorem maiores tempore dolores rerum vel dolor delectus sit aut quasi veritatis doloribus numquam.</p>
     <h2>este é o segundo titulo</h2>
