--- a/html5-css3-inicio/css/background.html
+++ b/html5-css3-inicio/css/background.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" type="text/css" href="styles.css" >
 </head>
 <body>
+    <div>
+        <a href="fontes.html">arquivo de fontes</a>
+    </div>
     <div class="div-background">
         <h1 class="titulo-background">este é o reino dos backgrounds</h1>
     </div>
