--- a/html5-css3-inicio/css/fontes.html
+++ b/html5-css3-inicio/css/fontes.html
@@ -11,6 +11,8 @@
         <p class="family serif">aqui é sobre as familias</p>
         <p class="family sans-serif">aqui é sobre as familias</p>
         <p class="family monospace">aqui é sobre as familias</p>
+        <p class="family italic">aqui é sobre as familias</p>
+        <p class="family obliquo">aqui é sobre as familias</p>
     </div>
 </body>
 </html>
