html5-css3-inicio - box model na pratica margin

--- a/html5-css3-inicio/css/boxmodel.html
+++ b/html5-css3-inicio/css/boxmodel.html
@@ -11,5 +11,10 @@
         <p class="paragrafo-box">paragrafo 2</p>
         <p class="paragrafo-box">paragrafo 3</p>
     </div>
+    <div class="boxmodel">
+        <p class="paragrafo-box">paragrafo 1</p>
+        <p class="paragrafo-box">paragrafo 2</p>
+        <p class="paragrafo-box">paragrafo 3</p>
+    </div>
 </body>
 </html>
