--- a/html5-css3-inicio/css/position.html
+++ b/html5-css3-inicio/css/position.html
@@ -8,7 +8,7 @@
 <body>
     <div class="div-position static"></div>
     <div class="div-position relative"></div>
-    <div class="div-position static"></div>
+    <div class="div-position absolute"></div>
     <div class="div-position static"></div>
     <div class="div-position static"></div>
 </body>
