html5-css3-inicio - entendendo positions sticky

--- a/html5-css3-inicio/css/position.html
+++ b/html5-css3-inicio/css/position.html
@@ -12,6 +12,6 @@
     </div>
     <div class="div-position absolute"></div>
     <div class="div-position fixed"></div>
-    <div class="div-position static"></div>
+    <div class="div-position sticky"></div>
 </body>
 </html>
