html5-css3-inicio - conhecendo o float

--- a/html5-css3-inicio/css/float.html
+++ b/html5-css3-inicio/css/float.html
@@ -12,7 +12,7 @@
             <p class="p-float">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet nesciunt optio a laudantium voluptate, commodi assumenda? Quibusdam dolor provident, deserunt consectetur delectus rem corporis suscipit, impedit numquam itaque quod deleniti.</p>
         </div>
         <div class="div-float">
-            <img class="img-float" src="img/html.png" >
+            <img class="img-float float-right" src="img/html.png" >
             <p class="p-float">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet nesciunt optio a laudantium voluptate, commodi assumenda? Quibusdam dolor provident, deserunt consectetur delectus rem corporis suscipit, impedit numquam itaque quod deleniti.</p>
         </div>
         <div class="div-float">
