html5-css3-inicio - utitlizando o clear para ajustar o float

--- a/html5-css3-inicio/css/float.html
+++ b/html5-css3-inicio/css/float.html
@@ -19,6 +19,10 @@
             <img class="img-float" src="img/html.png" >
             <p class="p-float">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet nesciunt optio a laudantium voluptate, commodi assumenda? Quibusdam dolor provident, deserunt consectetur delectus rem corporis suscipit, impedit numquam itaque quod deleniti.</p>
         </div>
+        <div class="div-float">
+            <p class="float-right">este vai flutuar para direita</p>
+            <p class="p-float clear">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet nesciunt optio a laudantium voluptate, commodi assumenda? Quibusdam dolor provident, deserunt consectetur delectus rem corporis suscipit, impedit numquam itaque quod deleniti.</p>
+        </div>
     </div>
 </body>
 </html>
