html5-css3-inicio - unidades de medida em e rem

--- a/html5-css3-inicio/css/units.html
+++ b/html5-css3-inicio/css/units.html
@@ -17,11 +17,13 @@
             <div class="porcentagem-2"></div>
         </div>
     </div>
-    <div>
+    <div class="pai-em">
         <p>medidas em em</p>
+        <div class="em-1"></div>
     </div>
     <div>
         <p>medidas em rem</p>
+        <div class="rem-1"></div>
     </div>
 </body>
 </html>
