--- a/html5-css3-inicio/projeto-tributo/index.html
+++ b/html5-css3-inicio/projeto-tributo/index.html
@@ -38,6 +38,34 @@
                     Passou pela Rede Tupi e Rede Record, nesta, conseguiu <span class="destaque">50% das ações da TV</span>. Mas o grande empreendimento de Silvio Santos seria o SBT - Sistema Brasileiro de Televisão, canal próprio, onde apresentaria o seu tradicional Programa "Silvio Santos" e venderia outros produtos, como o Baú da Felicidade, empresa de venda de carnês e sorteios.
                 </p>
             </div>
+            <!-- primeira citacao -->
+            <div class="frase-container">
+                <blockquote>"quem quer dinheiro ?"</blockquote>
+                <p>silvio santos</p>
+            </div>
+            <!-- curiosidades -->
+            <div class="curiosidades-container">
+                <h2>curiosidades de silvio santos</h2>
+            </div>
+            <!-- Segunda citação -->
+			<div class="frase-container">
+				<blockquote>"Qual ser humano que vai progredir se ele não recebe um estímulo?"</blockquote>
+				<p>Silvio Santos</p>
+			</div>
+            <!-- Segunda imagem de destaque -->
+			<div class="img-destaque">
+				<figure>
+					<img alt="silvio santos no palco" src="img/silvio2.jpg">
+					<figcaption>Silvio Santos e seu auditório</figcaption>
+				</figure>
+			</div>
+			<!-- Biografia -->
+			<div class="biografia-container">
+				<h2>Biografia</h2>
+				<p>Você pode conhecer mais sobre o Silvio comprando sua biografia 
+					<a href="https://www.amazon.com.br/Silvio-Santos-Biografia-Marcia-Batista/dp/8550302473?tag=goog0ef-20&smid=A1ZZFT5FULY4LN&ascsubtag=go_726685122_54292137521_242594579893_pla-396661836187_c_">aqui!</a>
+				</p>
+			</div>
         </div>
     </body>
 </html>
