--- a/html5-css3-inicio/projeto-tributo/index.html
+++ b/html5-css3-inicio/projeto-tributo/index.html
@@ -44,9 +44,16 @@
                 <p>silvio santos</p>
             </div>
             <!-- curiosidades -->
-            <div class="curiosidades-container">
-                <h2>curiosidades de silvio santos</h2>
-            </div>
+			<div class="curiosidades-container">
+				<h2>Curiosidades de Silvio Santos:</h2>
+				<ul>
+					<li>Seu verdadeiro nome é Senor Abravanel</li>
+					<li>Silvio Santos é pai de seis filhas</li>
+					<li>Ele costuma acordar as <span class="destaque">5 da manhã</span></li>
+					<li>Silvio já comandou mais de 120 atrações</li>
+					<li>É formado em contabilidade</li>
+				</ul>
+			</div>
             <!-- Segunda citação -->
 			<div class="frase-container">
 				<blockquote>"Qual ser humano que vai progredir se ele não recebe um estímulo?"</blockquote>
