html5-css3-inicio - iniciando o css - cabecalho e container

--- a/html5-css3-inicio/projeto-tributo/index.html
+++ b/html5-css3-inicio/projeto-tributo/index.html
@@ -10,7 +10,7 @@
             <!-- cabecalho da pagina -->
             <div class="cabecalho">
                 <h1 class="titulo-principal">silvio santos</h1>
-                <p class="paragrafo">um revolucioario apresentador brasileiro</p>
+                <p class="paragrafo">um revolucionario apresentador brasileiro</p>
             </div>
             <!-- imagem destaque -->
             <div class="img-destaque">
