html5-css3-inicio - projeto agencia - criando o html do header

--- a/html5-css3-inicio/projeto-agencia/index.html
+++ b/html5-css3-inicio/projeto-agencia/index.html
@@ -8,7 +8,26 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     </head>
     <body>
-        <h1>teste css</h1>
-        <i class="fab fa-500px"></i>
+        <div class="container">
+            <!-- banner -->
+            <header>
+                <div class="banner">
+                    <div class="box-container">
+                        <div class="box-background"></div>
+                        <div class="box-banner-title">
+                            <h1>agencia x</h1>
+                            <p>desenvolvendo os seus sistemas</p>
+                        </div>
+                    </div>
+                    <div class="company-info-container">
+                        <div class="company-info-background"></div>
+                        <div class="company_info-titlebox">
+                            <h2>seja bem-vindo ao nosso site</h2>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis expedita corporis necessitatibus eos enim delectus minus, quaerat libero consequatur ut. Culpa voluptatum amet facilis quibusdam atque, velit quisquam laboriosam nulla?</p>
+                        </div>
+                    </div>
+                </div>
+            </header>
+        </div>
     </body>
 </html>
