html5-css3-inicio - projeto agencia - criando o html do header

--- a/html5-css3-inicio/projeto-agencia/index.html
+++ b/html5-css3-inicio/projeto-agencia/index.html
@@ -21,7 +21,7 @@
                     </div>
                     <div class="company-info-container">
                         <div class="company-info-background"></div>
-                        <div class="company_info-titlebox">
+                        <div class="company-info-titlebox">
                             <h2>seja bem-vindo ao nosso site</h2>
                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis expedita corporis necessitatibus eos enim delectus minus, quaerat libero consequatur ut. Culpa voluptatum amet facilis quibusdam atque, velit quisquam laboriosam nulla?</p>
                         </div>
