--- a/html5-css3-inicio/projeto-agencia/index.html
+++ b/html5-css3-inicio/projeto-agencia/index.html
@@ -15,14 +15,14 @@
                     <div class="box-container">
                         <div class="box-background"></div>
                         <div class="box-banner-title">
-                            <h1>agencia x</h1>
+                            <h1>Agência X</h1>
                             <p>desenvolvendo os seus sistemas</p>
                         </div>
                     </div>
                     <div class="company-info-container">
                         <div class="company-info-background"></div>
                         <div class="company-info-titlebox">
-                            <h2>seja bem-vindo ao nosso site</h2>
+                            <h2>Seja bem-vindo ao nosso site</h2>
                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis expedita corporis necessitatibus eos enim delectus minus, quaerat libero consequatur ut. Culpa voluptatum amet facilis quibusdam atque, velit quisquam laboriosam nulla?</p>
                         </div>
                     </div>
