html5-css3-inicio - projeto agencia - html da secao de servicos

--- a/html5-css3-inicio/projeto-agencia/index.html
+++ b/html5-css3-inicio/projeto-agencia/index.html
@@ -28,6 +28,38 @@
                     </div>
                 </div>
             </header>
+            <!-- secao de servicos -->
+            <section>
+                <div class="services-container">
+                    <div class="service-box">
+                        <div class="service-title" id="gerenciamento-box">
+                            <p>Gerenciamento de projetos</p>
+                        </div>
+                        <div class="service-description">
+                            <h3 id="gerenciamento-title">Lorem ipsum</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente dolor perferendis cum distinctio commodi quas? Numquam laborum dolorem aut sunt, cumque saepe vitae aliquid consequuntur est. Cum cupiditate quis corrupti.</p>
+                        </div>
+                    </div>
+                    <div class="service-box">
+                        <div class="service-title" id="dev-box">
+                            <p>desenvolvimento</p>
+                        </div>
+                        <div class="service-description">
+                            <h3 id="dev-title">Lorem ipsum</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente dolor perferendis cum distinctio commodi quas? Numquam laborum dolorem aut sunt, cumque saepe vitae aliquid consequuntur est. Cum cupiditate quis corrupti.</p>
+                        </div>
+                    </div>
+                    <div class="service-box">
+                        <div class="service-title" id="desing-box">
+                            <p>Design ux/ui</p>
+                        </div>
+                        <div class="service-description">
+                            <h3 id="desing-title">Lorem ipsum</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente dolor perferendis cum distinctio commodi quas? Numquam laborum dolorem aut sunt, cumque saepe vitae aliquid consequuntur est. Cum cupiditate quis corrupti.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
     </body>
 </html>
