--- a/html5-css3-inicio/projeto-agencia/index.html
+++ b/html5-css3-inicio/projeto-agencia/index.html
@@ -60,6 +60,29 @@
                     </div>
                 </div>
             </section>
+            <!-- secao sobre a empresa -->
+            <div class="footer-container">
+                <section>
+                    <div class="about-container">
+                        <div class="about-card">
+                            <i class="fas fa-server"></i>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam laudantium id non consequatur totam et eos, unde soluta architecto ex molestiae minus ratione dolore hic rem magni veniam iure. Hic.</p>
+                        </div>
+                    </div>
+                    <div class="about-container">
+                        <div class="about-card middle-card">
+                            <i class="fas fa-briefcase"></i>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam laudantium id non consequatur totam et eos, unde soluta architecto ex molestiae minus ratione dolore hic rem magni veniam iure. Hic.</p>
+                        </div>
+                    </div>
+                    <div class="about-container">
+                        <div class="about-card">
+                            <i class="fas fa-tablet-alt"></i>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam laudantium id non consequatur totam et eos, unde soluta architecto ex molestiae minus ratione dolore hic rem magni veniam iure. Hic.</p>
+                        </div>
+                    </div>
+                </section>
+            </div>
         </div>
     </body>
 </html>
