--- a/html5-css3-avancado/html5/index.html
+++ b/html5-css3-avancado/html5/index.html
@@ -5,5 +5,10 @@
 	</head>
 	<body>
 		<h1>recursos do html 5</h1>
+		<div>
+			<video width="320" height="240" controls>
+				<source src="video/cidade.mp4" type="video/mp4" >
+			</video>
+		</div>
 	</body>
 </html>
