--- a/html5-css3-avancado/html5/index.html
+++ b/html5-css3-avancado/html5/index.html
@@ -10,5 +10,16 @@
 				<source src="video/cidade.mp4" type="video/mp4" >
 			</video>
 		</div>
+		<div>
+			<audio controls>
+				<source src="audio/music.mp3" type="audio/mpeg" >
+			</audio>
+		</div>
+		<div>
+			<figure>
+				<img src="img/ricefield.jpg" alt="campo de arroz">
+				<figcaption>um lindo campo de arroz....</figcaption>
+			</figure>
+		</div>
 	</body>
 </html>
